Download latest patched Java 17 JRE during Linux install
- Changes the minimum GoCD Server version to 21.4.0, the earliest server version bundled with agent code that can run under Java 17 without special arguments.
- Defaults to an agent bootstrapper version from 22.3.0 which will work fine with GoCD Server 21.4.0